--- a/index.html
+++ b/index.html
@@ -397,6 +397,66 @@
             <section>
               <h2>Brand</h2>
               <h4 id="colors">Colors</h4>
+              <p>This is the Knight Lab palette. Each color is available as a CSS class. Use the suffix <code>-bg</code> to create an element with a select background color, or <code>-text</code> to create an element with that color text. (E.g., <code>.orange-bg</code> or <code>.orange-text</code>.)</p>
+              <p>When used for text, <span class="dark-orange-text">dark orange</span> yields best readability. Links are <span class="dark-blue-text">dark blue</span> by default and become <span class="light-blue-text">light blue</span> when hovered over. <span class="yellow-bg">Yellow</span> is best used sparingly as an accent color.</p>
+              <div class="panel">
+                <div class="paint-chip dark-blue-bg">
+                  <div class="color-deets">
+                    <p><strong>Dark blue</strong></p>
+                    <p>.dark-blue-bg</p>
+                    <p>#147693</p>
+                  </div>
+                </div>
+                <div class="paint-chip medium-blue-bg">
+                  <div class="color-deets">
+                    <p><strong>Medium blue</strong></p>
+                    <p>.medium-blue-bg</p>
+                    <p>#0f9bd1</p>
+                  </div>
+                </div>
+                <div class="paint-chip light-blue-bg">
+                  <div class="color-deets">
+                    <p><strong>Light blue</strong></p>
+                    <p>.light-blue-bg</p>
+                    <p>#1dacd6</p>
+                  </div>
+                </div>
+                <div class="paint-chip yellow-bg">
+                  <div class="color-deets">
+                    <p><strong>Yellow</strong></p>
+                    <p>.yellow-bg</p>
+                    <p>#eae34a</p>
+                  </div>
+                </div>
+                <div class="paint-chip dark-orange-bg">
+                  <div class="color-deets">
+                    <p><strong>Dark orange</strong></p>
+                    <p>.dark-orange-bg</p>
+                    <p>#c34528</p>
+                  </div>
+                </div>
+                <div class="paint-chip orange-bg">
+                  <div class="color-deets">
+                    <p><strong>Orange</strong></p>
+                    <p>.orange-bg</p>
+                    <p>#ce4d28</p>
+                  </div>
+                </div>
+                <div class="paint-chip light-orange-bg">
+                  <div class="color-deets">
+                    <p><strong>Light orange</strong></p>
+                    <p>.light-orange-bg</p>
+                    <p>#e35a25</p>
+                  </div>
+                </div>
+                <div class="paint-chip lightest-orange-bg">
+                  <div class="color-deets">
+                    <p><strong>Lightest orange</strong></p>
+                    <p>.lightest-orange-bg</p>
+                    <p>#f7ccb2</p>
+                  </div>
+                </div>
+              </div>
             </section>
             <section>
               <h4 id="horizontal-logos">Horizontal logos</h4>
